--- a/3ds.html
+++ b/3ds.html
@@ -11,48 +11,33 @@
             background: #87CEFA; /* Sky blue background */
             position: relative; /* Allow positioning of children */
         }
-        canvas {
-            background: #ffffff; /* White canvas */
-            display: block;
-        }
-        /* Custom positions for 3DS screens */
-        #topscreenleft {
+        /* Top screen for gameplay */
+        #topscreen {
             position: absolute;
             left: 0px;
-            top: 30px;
-            width: 320px; /* Width of the top left screen */
-            height: 240px; /* Height of the top left screen */
+            top: 0px;
+            width: 320px; /* Width of the top screen */
+            height: 240px; /* Height of the top screen */
             overflow: hidden;
+            background: #ffffff; /* White background for gameplay */
         }
-        #topscreenright {
-            position: absolute;
-            left: 200px;
-            top: 30px;
-            width: 320px; /* Width of the top right screen */
-            height: 240px; /* Height of the top right screen */
-            overflow: hidden;
-        }
+        /* Bottom screen for information (e.g., music player) */
         #bottomscreen {
             position: absolute;
-            left: 40px;
+            left: 0px;
             top: 240px;
             width: 320px; /* Width of the bottom screen */
             height: 240px; /* Height of the bottom screen */
-            overflow: hidden;
+            background: #f0f0f0; /* Light gray background */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        #helpscreen {
-            position: absolute;
-            left: 40px;
-            top: 30px;
-            width: 320px;
-            height: 450px;
-            overflow: hidden;
-            visibility: hidden;
+        /* Music player styling */
+        #musicPlayer {
+            margin-top: 20px;
         }
-        #clear { position: absolute; left: 0px; top: 190px; z-index: 999; }
-        #check { position: absolute; left: 250px; top: 190px; z-index: 999; }
-        #restart { position: absolute; left: 110px; top: 0px; z-index: 999; }
-        #corner { position: absolute; left: 300px; top: 0px; z-index: 999; }
     </style>
     <script>
         var canvas, ctx;
@@ -88,7 +73,7 @@
         function init() {
             canvas = document.createElement('canvas');
             ctx = canvas.getContext('2d');
-            document.body.appendChild(canvas);
+            document.getElementById('topscreen').appendChild(canvas);
             resizeCanvas();
             initPlayer();
             initPlatforms();
@@ -98,16 +83,8 @@
 
         // Resize Canvas
         function resizeCanvas() {
-            if (is3DS) {
-                canvas.width = 320; // Width of the bottom screen
-                canvas.height = 240; // Height of the bottom screen
-                canvas.style.position = "absolute";
-                canvas.style.left = "40px"; // Adjust position
-                canvas.style.top = "240px"; // Position for the bottom screen
-            } else {
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight * 0.75; // Adjust height for other browsers
-            }
+            canvas.width = 320; // Width of the top screen
+            canvas.height = 240; // Height of the top screen
         }
 
         // Setup Controls
@@ -199,5 +176,17 @@
     </script>
 </head>
 <body>
+    <!-- Top screen for gameplay -->
+    <div id="topscreen"></div>
+    <!-- Bottom screen for information -->
+    <div id="bottomscreen">
+        <h2>Music Player</h2>
+        <div id="musicPlayer">
+            <audio controls>
+                <source src="your-music-file.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
 </body>
 </html>
